--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^3.0.0",
     "@emotion/react": "^11.12.0",
     "@emotion/styled": "^11.12.0",
     "@mui/icons-material": "^5.16.4",
+    "@mui/lab": "^5.0.0-alpha.173",
     "@mui/system": "^5.16.4",
+    "@mui/x-date-pickers": "^7.14.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
