--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.3",
     "keen-slider": "^6.8.6",
     "mui-datatables": "^4.3.0",
     "react": "^18.3.1",
