--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@mui/system": "^5.16.4",
     "@mui/x-data-grid": "^7.21.0",
     "@mui/x-date-pickers": "^7.22.1",
+    "@reduxjs/toolkit": "^2.3.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -27,6 +28,7 @@
     "react-countdown": "^2.3.5",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
