--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.3",
     "keen-slider": "^6.8.6",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.454.0",
     "mui-datatables": "^4.3.0",
     "papaparse": "^5.4.1",
@@ -28,6 +29,7 @@
     "react-countdown": "^2.3.5",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
+    "react-leaflet": "^4.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
