--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
+    "recharts": "^2.15.0",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
   },
