--- a/package.json
+++ b/package.json
@@ -4,19 +4,22 @@
   "private": true,
   "dependencies": {
     "@date-io/date-fns": "^3.0.0",
-    "@emotion/react": "^11.12.0",
-    "@emotion/styled": "^11.12.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^5.16.12",
     "@mui/lab": "^5.0.0-alpha.173",
+    "@mui/material": "^6.4.4",
     "@mui/system": "^5.16.4",
     "@mui/x-data-grid": "^7.21.0",
-    "@mui/x-date-pickers": "^7.22.1",
+    "@mui/x-date-pickers": "^7.27.0",
+    "@mui/x-date-pickers-pro": "^7.27.0",
     "@reduxjs/toolkit": "^2.3.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.5",
     "date-fns": "^3.6.0",
+    "dayjs": "^1.11.13",
     "firebase": "^10.13.2",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.3",
